--- a/index.html
+++ b/index.html
@@ -423,14 +423,14 @@
         <section class="page active" id="page1">
           <div class="hero">
             <div>
-              <h1 id="title">Hey love 💖</h1>
-              <p class="subtitle">I made a tiny corner of the internet… just for us.</p>
+              <h1 id="title">Hiiii 💖</h1>
+              <p class="subtitle">Here's a website I made for you...</p>
 
               <div class="type" id="typebox" aria-live="polite"></div>
 
               <div class="cta-row">
                 <button class="btn" id="toGallery">Next → Gallery</button>
-                <button class="btn secondary" id="surprise">Tap for a surprise ✨</button>
+                <button class="btn secondary" id="surprise">Tap Here ✨</button>
               </div>
 
               <p class="tiny" style="margin-top:12px; opacity:.9;">
@@ -448,22 +448,22 @@
         <section class="page" id="page2">
           <div class="gallery-head">
             <div>
-              <h1 style="margin:0 0 6px;">Our Gallery 📸</h1>
-              <p class="subtitle" style="margin:0;">Click an image to view it bigger.</p>
+              <h1 style="margin:0 0 6px;">Our Moments 📸</h1>
+              <p class="subtitle" style="margin:0;">We really need to take more pictures!</p>
             </div>
-            <button class="btn" id="toQuestion">Next → The Question</button>
+            <button class="btn" id="toQuestion">Next → </button>
           </div>
 
           <div class="gallery-grid" id="gallery">
             <!-- Replace these with your real images in /images -->
-            <div class="tile"><img src="images/1.jpg" alt="Us 1"></div>
-            <div class="tile"><img src="images/2.jpg" alt="Us 2"></div>
-            <div class="tile"><img src="images/3.jpg" alt="Us 3"></div>
-            <div class="tile"><img src="images/4.jpg" alt="Us 4"></div>
-            <div class="tile"><img src="images/5.jpg" alt="Us 5"></div>
-            <div class="tile"><img src="images/6.jpg" alt="Us 6"></div>
-            <div class="tile"><img src="images/7.jpg" alt="Us 7"></div>
-            <div class="tile"><img src="images/8.jpg" alt="Us 8"></div>
+            <div class="tile"><img src="images\\1.jpg" alt="Us 1"></div>
+            <div class="tile"><img src="images\\2.jpg" alt="Us 2"></div>
+            <div class="tile"><img src="images\\3.jpg" alt="Us 3"></div>
+            <div class="tile"><img src="images\\4.jpg" alt="Us 4"></div>
+            <div class="tile"><img src="images\\5.jpg" alt="Us 5"></div>
+            <div class="tile"><img src="images\\6.jpg" alt="Us 6"></div>
+            <div class="tile"><img src="images\\7.jpg" alt="Us 7"></div>
+            <div class="tile"><img src="images\\8.jpg" alt="Us 8"></div>
           </div>
         </section>
 
@@ -471,7 +471,7 @@
         <section class="page" id="page3">
           <div class="question">
             <h2>Will you be my Valentine? 💝</h2>
-            <p>Choose wisely… the “No” button is kinda shy 😅</p>
+            <p>Choose wisely!</p>
 
             <div class="arena" id="arena">
               <div class="choice-row">
@@ -492,7 +492,7 @@
       </main>
 
       <footer>
-        <div>Made with 💗 by <span id="by">you</span></div>
+        <div>Made with 💗 by <span id="by">Kyle</span></div>
         <div class="tiny">GitHub Pages ready • no frameworks</div>
       </footer>
     </div>
@@ -537,9 +537,9 @@
     // ====== TYPEWRITER INTRO ======
     const typebox = document.getElementById('typebox');
     const lines = [
-      "Hi beautiful 😌",
+      "Hiii 😌",
       "I wanted to do something small but memorable.",
-      "So here’s a little journey: intro → photos → one important question… 💘"
+      "So here’s a little journey 💘"
     ];
     let typingTimer;
 
@@ -659,7 +659,7 @@
           "Hehe nope 😅",
           "Too slow 😜",
           "Try again 🤭",
-          "I’m shy 🙈"
+          "Nice try 🙈"
         ]);
       }, {passive:false});
     });
@@ -702,7 +702,7 @@
     }
 
     // ====== Optional: Set your name in footer ======
-    // document.getElementById('by').textContent = "Your Name";
+    document.getElementById('by').textContent = "Kyle";
   </script>
 </body>
 </html>
