--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <div class="nav">
           <button class="pill" data-go="1">Intro</button>
           <button class="pill" data-go="2">Gallery</button>
-          <button class="pill" data-go="3">The Question</button>
+          <button class="pill" data-go="3">Question</button>
         </div>
       </header>
 
@@ -429,7 +429,7 @@
               <div class="type" id="typebox" aria-live="polite"></div>
 
               <div class="cta-row">
-                <button class="btn" id="toGallery">Next → Gallery</button>
+                <button class="btn" id="toGallery">Next →</button>
                 <button class="btn secondary" id="surprise">Tap Here ✨</button>
               </div>
 
@@ -461,7 +461,7 @@
             <div class="tile"><img src="images\\3.jpg" alt="Us 3" data-message="Always trying to be me!!"></div>
             <div class="tile"><img src="images\\4.jpg" alt="Us 4" data-message="Diesel said he likes me more..."></div>
             <div class="tile"><img src="images\\5.jpg" alt="Us 5" data-message="I'm excited to try more wine!"></div>
-            <div class="tile"><img src="images\\6.jpg" alt="Us 6" data-message="It's always beignet time!"></div>
+            <div class="tile"><img src="images\\6.jpg" alt="Us 6" data-message="Your first real football experience!"></div>
             <div class="tile"><img src="images\\7.jpg" alt="Us 7" data-message="We should try more new restraunts!"></div>
             <div class="tile"><img src="images\\8.jpg" alt="Us 8" data-message="Bring back the digital camera!"></div>
           </div>          
