--- a/index.html
+++ b/index.html
@@ -786,14 +786,14 @@
           <div class="gallery-grid" id="gallery">
             <!-- Replace these with your real images in /images -->
             <!-- data-tags used by the verification gate -->
-            <div class="tile"><img src="images\\1.jpg" alt="Us 1" data-message="Always looking fab!" data-tags="none"></div>
-            <div class="tile"><img src="images\\2.jpg" alt="Us 2" data-message="Your first real football experience." data-tags="football"></div>
-            <div class="tile"><img src="images\\3.jpg" alt="Us 3" data-message="Always trying to be me!!" data-tags="none"></div>
-            <div class="tile"><img src="images\\4.jpg" alt="Us 4" data-message="Diesel said he likes me more..." data-tags="diesel"></div>
-            <div class="tile"><img src="images\\5.jpg" alt="Us 5" data-message="I'm excited to try more wine!" data-tags="none"></div>
-            <div class="tile"><img src="images\\6.jpg" alt="Us 6" data-message="The sports bar experience!" data-tags="none"></div>
-            <div class="tile"><img src="images\\7.jpg" alt="Us 7" data-message="We should try more new restraunts!" data-tags="none"></div>
-            <div class="tile"><img src="images\\8.jpg" alt="Us 8" data-message="Bring back the digital camera!" data-tags="camera"></div>
+            <div class="tile"><img src="images/1.jpg" alt="Us 1" data-message="Always looking fab!" data-tags="none"></div>
+            <div class="tile"><img src="images/2.jpg" alt="Us 2" data-message="Your first real football experience." data-tags="football"></div>
+            <div class="tile"><img src="images/3.jpg" alt="Us 3" data-message="Always trying to be me!!" data-tags="none"></div>
+            <div class="tile"><img src="images/4.jpg" alt="Us 4" data-message="Diesel said he likes me more..." data-tags="diesel"></div>
+            <div class="tile"><img src="images/5.jpg" alt="Us 5" data-message="I'm excited to try more wine!" data-tags="none"></div>
+            <div class="tile"><img src="images/6.jpg" alt="Us 6" data-message="The sports bar experience!" data-tags="none"></div>
+            <div class="tile"><img src="images/7.jpg" alt="Us 7" data-message="We should try more new restraunts!" data-tags="none"></div>
+            <div class="tile"><img src="images/8.jpg" alt="Us 8" data-message="Bring back the digital camera!" data-tags="camera"></div>
           </div>
         </section>
 
@@ -1158,7 +1158,7 @@
 
       // Add the new 9th image specifically requested
       base.push({
-        src: "images\\6__.jpg",
+        src: "images/IMG_8998.JPG",
         alt: "Us 9",
         tags: splitTags("none"),
         message: ""
