--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
             <div class="tile"><img src="images/3.jpg" alt="Us 3" data-message="Always trying to be me!!" data-tags="none"></div>
             <div class="tile"><img src="images/4.jpg" alt="Us 4" data-message="Diesel said he likes me more..." data-tags="diesel"></div>
             <div class="tile"><img src="images/5.jpg" alt="Us 5" data-message="I'm excited to try more wine!" data-tags="none"></div>
-            <div class="tile"><img src="images/6.jpg" alt="Us 6" data-message="The sports bar experience!" data-tags="none"></div>
+            <div class="tile"><img src="images/IMG_8252.jpeg" alt="Us 6" data-message="Nola adventures!" data-tags="none"></div>
             <div class="tile"><img src="images/7.jpg" alt="Us 7" data-message="We should try more new restraunts!" data-tags="none"></div>
             <div class="tile"><img src="images/8.jpg" alt="Us 8" data-message="Bring back the digital camera!" data-tags="camera"></div>
           </div>
